# doc_intelligence

./: .gitignore  CLAUDE.md  CLAUDE_tome1.md  CLAUDE_tome2.md  CLAUDE_tome2_translation.md  LICENSE  MANIFEST.in  README.md  _quarto.yml  bench_parse_pdf_results_js.csv  demo.py  pyproject.toml  requirements.txt
.claude/memory/: MEMORY.md  feedback_dev_workflow.md  feedback_notebook_numbering.md  feedback_notebook_section_titles.md
data/insurance/: questions.xlsx  questions_aviva.xlsx  questions_v1.xlsx  questions_v2.xlsx
data/paper/: questions.xlsx
docpipeline/: __init__.py  cli.py
docpipeline/conversion/: __init__.py  _adobe_converter.py  _docling_converter.py  _ocr_converter.py  _overlay_converter.py  _smart_converter.py  pdf_to_word.py
docpipeline/excel_agent/: __init__.py  sql_agent.py
docpipeline/generation/: llm_client.py  summarizer.py
docpipeline/parsing/: __init__.py
docpipeline/retrieval/: __init__.py  retriever.py
docpipeline/translation/: __init__.py  side_by_side.py  word_translator.py
docs/: 06_question_layer copy.md  06_question_layer.md  06_question_parsing.md  08_methodo_translation_js.md  08_methodologie_translation_js.md  08_methodology_toc_detection_pdf.md
docs/diagrams/: 01_pipeline.excalidraw  02_architecture.excalidraw  03_word_vs_pdf.excalidraw  README.md  _build_excalidraw.py  _export_png.py
notebooks/: 05_bench_apply_changes_js.ipynb  05_parse_pdf_js.ipynb  05_parse_pptx_js.ipynb  05_parse_word_js.ipynb  05_rendering_pptx_js.ipynb  06_question_parsing_js.ipynb  06_understanding_question copy.ipynb  06_understanding_question.ipynb  07_generate_invoice_pdfs.ipynb  _run_bench.py  _run_bench_js.py  _summarize_bench_js.py  bench_parse_pdf.ipynb  bench_parse_pdf_js.ipynb  parse_pdf_js.ipynb  question_parsing_js.ipynb
notebooks/02_question_parsing/: 06_question_parsing_js.qmd  06_understanding_question.ipynb
notebooks/05_rendering/: 05_rendering_pptx_js.ipynb  05_rendering_pptx_js.qmd  05_test_conversion_pdf_word.ipynb
tests/: test_conversion.py  test_excel_ingester.py  test_glossary.py  test_new_modules.py  test_parse_pdf.py  test_pdf_classifier.py  test_pdf_toc_detection.py  test_question_parsing.py  test_retriever.py  test_translation_request_js.py  test_translation_scope_js.py  test_understand_question.py  test_word_parser.py
(+117 files in other folders)
