[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpipeline"
version = "0.2.2"
description = "Pipeline modulaire de traitement documentaire IA — 4 briques (Parsing, Retrieval, Question, Génération) × N formats."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Faseya — docpipeline contributors" }
]
keywords = [
    "pdf", "docx", "ocr", "document-processing",
    "llm", "rag", "translation", "nlp", "pipeline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pymupdf>=1.23",
    "pdfplumber>=0.10",
    "pdf2docx>=0.5",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "pillow>=10.0",
    "lxml>=5.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "langdetect>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.25"]
ocr = ["pytesseract>=0.3"]
ocr-paddle = ["paddleocr>=2.7"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy", "build", "twine"]
all = [
    "openai>=1.0",
    "anthropic>=0.25",
    "pytesseract>=0.3",
]

[project.scripts]
docpipeline = "docpipeline.cli:main"

[project.urls]
Homepage = "https://github.com/BosterJack/docpipeline"
Repository = "https://github.com/BosterJack/docpipeline"
Issues = "https://github.com/BosterJack/docpipeline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docpipeline*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
docpipeline = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
